[feature] Fetch one payment (WIP)